// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using adp.Models;

#nullable disable

namespace adp.Migrations
{
    [DbContext(typeof(MyDbContext))]
    [Migration("20231117182446_CreateTableAluno")]
    partial class CreateTableAluno
    {
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "6.0.1")
                .HasAnnotation("Relational:MaxIdentifierLength", 64);

            modelBuilder.Entity("adp.Models.Pessoa", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    b.Property<string>("Discriminator")
                        .IsRequired()
                        .HasColumnType("longtext");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasColumnType("longtext");

                    b.HasKey("Id");

                    b.ToTable("Pessoa");

                    b.HasDiscriminator<string>("Discriminator").HasValue("Pessoa");
                });

            modelBuilder.Entity("adp.Models.Usuario", b =>
                {
                    b.Property<int?>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    b.Property<string>("Login")
                        .HasColumnType("longtext");

                    b.Property<string>("Nome")
                        .HasColumnType("longtext");

                    b.Property<string>("Password")
                        .HasColumnType("longtext");

                    b.HasKey("Id");

                    b.ToTable("Usuario");
                });

            modelBuilder.Entity("adp.Models.Aluno", b =>
                {
                    b.HasBaseType("adp.Models.Pessoa");

                    b.Property<string>("Password")
                        .HasColumnType("longtext");

                    b.HasDiscriminator().HasValue("Aluno");
                });

            modelBuilder.Entity("adp.Models.Professor", b =>
                {
                    b.HasBaseType("adp.Models.Pessoa");

                    b.Property<int>("Formacao")
                        .HasColumnType("int");

                    b.Property<string>("Salario")
                        .IsRequired()
                        .HasColumnType("longtext");

                    b.HasDiscriminator().HasValue("Professor");
                });
#pragma warning restore 612, 618
        }
    }
}
