using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;
using System.ComponentModel.DataAnnotations;

namespace adp.Models
{
    public class Aluno : Pessoa
    {
        [Display(Name="Senha")]
        public string? Password {get; set;}
    }
}